<resources>
    <string name="app_name">crmapp</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="developed_by_company_xyz">Developed By Earl Centre Ltd</string>
    <string name="backgroundimage">background image</string>
    <string name="logo">Logo</string>
    <string name="name">Afrimac Nut</string>
    <string name="names">Name:</string>
    <string name="company_limited">Company Limited</string>
    <string name="purchase">Purchase</string>
    <string name="dispatch">Dispatch</string>
    <string name="expenses">Expenses</string>
    <string name="reception">Reception</string>
    <string name="reports">Reports</string>
    <string name="cash">Cash</string>
    <string name="settings">Settings</string>
    <string name="add_farmer">Add Farmer</string>
    <string name="tare_weight">Tare Weight:</string>
    <string name="tare_weight_lbl">Tare Weight</string>
    <string name="farmer">Farmer:</string>
    <string name="select_farmer">Select Farmer</string>
    <string name="bag_type">Bag Type:</string>
    <string name="select_bag_type">Select Bag Type</string>
    <string name="quantity">Quantity:</string>
    <string name="select_parameter">Select Parameter</string>
    <string name="weight">Weight:</string>
    <string name="total_weight">Total Weight:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="reprint">Reprint</string>
    <string name="no">No.</string>
    <string name="unit_price">Unit Price</string>
    <string name="weight_tble">Weight</string>
    <string name="total_price">Total Price</string>
    <string name="select_driver">Select Driver</string>
    <string name="driver">Driver</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="center">Center:</string>
    <string name="select_center">Select Center</string>
    <string name="no_of_bags">No Of Bags</string>
    <string name="total_cost">Total Cost:</string>
    <string name="farmer_name">Enter Farmer Name</string>
    <string name="id_no">ID No.</string>
    <string name="enter_id_number">Enter ID Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="farmer_type">Farmer Type:</string>
    <string name="phone_no">Phone No.</string>
    <string name="select_farmer_type">Select Farmer Type</string>
    <string name="select_gender">Select Gender</string>
    <string name="date">Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="payment_purpose">Payment Purpose:</string>
    <string name="enter_payment_purpose">Enter Payment Purpose</string>
    <string name="amount">Amount.</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="purchase_reports">Purchase Reports</string>
    <string name="dispatch_reports">Dispatch Reports</string>
    <string name="farmer_reports">Farmer Reports</string>
    <string name="expense_reports">Expense Reports</string>
    <string name="add">Add</string>
    <string name="field_officer">Field Officer</string>
    <string name="change_password">Change Password</string>
    <string name="add_bluetooth_device">Add Bluetooth Device</string>
    <string name="logout">Log Out</string>
    <string name="opening_balance">Opening Balance</string>
    <string name="closing_balance">Closing Balance</string>
    <string name="no_of_kgs">No Of Kgs:</string>
    <string name="vehicle">Vehicle</string>
    <string name="scan_for_devices">Scan For Devices</string>
    <string name="scanning">Scan For Bluetooth Devices</string>
    <string name="scanning_in_progress">Scanning in progress..</string>
    <string name="device_name">Device Name</string>

    <!--    attempting Dispatch module - fetch driver -->
    <string name="FName">First Name</string>
    <string name="LName">Last Name</string>
    <string name="EMail">Email</string>
    <string name="Phone_no">Email</string>
    <string name="close">close</string>
    <string name="status">status</string>
    <string name="rejected">Rejected</string>
    <string name="enter_no_of_kgs">Enter no. of Kgs</string>
    <string name="quality">Quality</string>
    <string name="select">Select</string>
    <string name="percentage">%</string>
    <string name="price_cost">Cost</string>
    <string name="enter_cost">Enter cost</string>
    <string name="_0_00">0.00</string>
    <string name="payment_mode">Payment \n Mode:</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string name="tare">Tare</string>
    <string name="total_weights">Total Weight</string>
    <string name="received">Received</string>
    <string name="gender">Gender</string>
    <string name="no_of_trees">No. of Trees</string>
    <string name="enter_no_of_trees">Enter no. of trees</string>
    <string name="grower_type">Grower Type</string>
    <string name="select_grower_type">Select Grower Type</string>
    <string name="received_amount">Received Amount</string>
    <string name="enter_received_amount">Enter Received amount</string>
    <string name="cash_at_hand">Cash at Hand</string>
    <string name="calculated_field">calculated field</string>
    <string name="total_purchase">Total Purchase</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="enter_no_of_bags">Enter no. of bags</string>
    <string name="receipts_n_dispatched">Receipts \n Dispatched:</string>
    <string name="select_receipts">Select Receipts</string>
    <string name="driver_code">Driver Code:</string>
    <string name="enter_driver_code">Enter Driver Code</string>
    <string name="receipts">Receipts</string>
    <string name="ble_playground">BLE Connectivity</string>


</resources>