<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_resource"
    android:fitsSystemWindows="true"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/josefinslabbold"
        android:text="@string/name"
        android:textColor="#F57C00"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:elevation="72dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_margin="24dp"
            app:srcCompat="@drawable/person_drawable">

        </com.google.android.material.imageview.ShapeableImageView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/outfit_xtr_light"
            android:text="@string/field_officer"
            android:textColor="@color/black"
            android:textSize="18sp">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changePasswordBtn"
            android:layout_width="195dp"
            android:layout_height="56dp"
            android:layout_margin="24dp"
            android:fontFamily="@font/outfit_xtr_light"
            android:text="@string/change_password"
            android:textAllCaps="false">

        </com.google.android.material.button.MaterialButton>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addDeviceBtn"
            android:layout_width="195dp"
            android:layout_height="56dp"
            android:fontFamily="@font/outfit_xtr_light"
            android:text="@string/add_bluetooth_device"
            android:textAllCaps="false">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logOutBtn"
            android:layout_width="195dp"
            android:layout_height="56dp"
            android:layout_margin="24dp"
            android:fontFamily="@font/outfit_xtr_light"
            android:text="@string/logout"
            android:textAllCaps="false">

        </com.google.android.material.button.MaterialButton>

        <View
            android:id="@+id/linearLayoutCompat5"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp">

        </View>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:fontFamily="@font/outfit_xtr_light"
            android:text="@string/developed_by_company_xyz"
            android:textColor="@color/grey_200"
            android:textSize="16sp">

        </androidx.appcompat.widget.AppCompatTextView>
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>
</androidx.constraintlayout.widget.ConstraintLayout>